# MBDIA25_CS_StravaDashboard

./: .env.example  .gitignore  23.10.25_Meeting.md  PROJECT_CONVERSATION.md  QUICK_START.md  README.md  SMART_COMMANDS_GUIDE.md  auth.py  config.py  dashboard.ipynb  data_manager.py  data_processing.py  debug_data.py  notes.md  pyproject.toml  reqdoc.md  requirements.txt  setup.bat  setup.sh  setup_guide.md  strava_api.py
docs/: QUICK_START.md  SMART_COMMANDS_GUIDE.md  conv.md  meeting2.md  pptnotes.md  reqdoc.md
scripts/: setup.bat  setup.sh
src/: __init__.py  ai_assistant.py  analyst.py  auth.py  config.py  data_manager.py  data_processing.py  strava_api.py  visualizations.py
